<resources>
    <string name="app_name">Qair</string>
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="greet_string">New Here ? Sign Up Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="you_re_profession">Profession?</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="exam_name">Exam Name</string>
    <string name="add_question">Add another question</string>
    <string name="date_format">dd/mm/yy</string>
</resources>
