<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e1b7b7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:layout_margin="8dp"
        android:layout_gravity="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="22sp"
        android:layout_margin="8dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_margin="8dp"
        android:textSize="22sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/Login"
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greet_string"
        android:textSize="22sp"
        android:layout_margin="8dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"/>




</LinearLayout>