<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e1b7b7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:layout_margin="8dp"/>
    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_margin="8dp"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="You're profession?"
        android:layout_margin="8dp" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/Teacher_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Teacher"
            />
        <RadioButton
            android:id="@+id/Student_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student"
            />
    </RadioGroup>
    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>


    <EditText
        android:id="@+id/user_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        />
</LinearLayout>